assets/scss/aol.liveupdate.scss
@import "../resources/jquery-ui.scss";
@import "compass/css3";
@import "animation";


@include keyframes(colorPulse) {
      0% {background-color: #EEEEEE;}
    100% {background-color: lightYellow;}
}

.lb {
    width: 100%;
    font-family: 'Lucida Grande', Arial, Helvetica, sans-serif;
    padding-right: 10px;

    .lb-post {
        /*float: left;*/
        clear: both;
        display: block;
        border-bottom: 1px dotted #AAAAAA;
        overflow: hidden;
        padding: {
            top: 1em;
            right: 10px;
            bottom: 1em;
            left: 0;
        }
        margin: {
            bottom: 0;
            top: 0;
        }

        img {
            cursor: pointer;
            float: left;
            height: auto;
            width: auto;
            margin: {
                right: 15px;
            }
            padding: 2px;
            border: 1px solid #CCCCCC;
        }

        .lb-img-loading {
            color: #fff;
            float: left;
            font-size: 12px;
            margin: {
                right: 15px;
                bottom: 10px;
            }
            position: relative;
            text-align: center;
            text-transform: uppercase;

            span {
                background: black;
                bottom: 0;
                display: block;
                left: 0;
                line-height: 4;
                @include opacity(0.5);
                position: absolute;
                right: 0;
                text-align: center;
                top: 0;
            }

            img {
                margin: 0;
            }
        }


        a {
            color: #206994;
            text-decoration: none;

            &:hover {
                color: #206994;
                text-decoration: underline;
            }
        }

        &.lb-top {
           /*background-color: yellow;*/
        }

    }

    .lb-comment {
        padding-left: 50px;
        background: #EEEEEE;

        .lb-comment-icon {
            display: block;
            position: absolute;
            height: 35px;
            width: 15px;
            margin: {
                top: -1em;
                left: -35px;
            }
            border-left: 2px solid #AAAAAA;
            border-bottom: 2px solid #AAAAAA;
            @include border-radius(0 0 0 10px);
        }
        .lb-comment-icon-dot {
            width: 8px;
            height: 8px;
            @include border-radius(50%);
            background-color: #AAAAAA;
            position: absolute;
            bottom: -5px;
            right: -2px;
            font-size: 1px;
        }
    }

    .lb-post-text {
        /*float: left;*/
        display: block;
        /*clear: both;*/
        margin-bottom: 5px;
    }

    .lb-post-caption {
      display: block;
      margin: {
        bottom: 5px;
      }
    }

    .lb-post-info {
        /*float: left;*/
        /*clear: both;*/
        min-height: 20px;
        position: relative;

        .twitter-share-button {
            // Config
            $tweetButtonWidth: 56px;
            $leftPadding: 10px;

            bottom: -2px;
            /*@include inline-block();*/
            position: absolute;
            right: ($tweetButtonWidth + $leftPadding) * -1;
        }
    }

    .lb-post-author-tab {
      float: left;
      margin: {
        right: 15px;
      }

      .lb-profile-image {
        border: none;
        cursor: auto;
        height: auto;
        margin: {
          top: 0;
          right: 0;
          bottom: 0;
          left: 0;
        };
        padding: 0;
        width: auto;
        max-height: 50px;
      }

      .lb-blogger-name {
        /*clear: left;*/
        color: hsl(0, 0%, 40%);
        float: left;
        font: {
          size: 12px;
        }
        max-width: 50px;
      }
    }
    
    .lb-featured {
      .lb-post-author-tab {
        background: {
          color: hsl(0, 0%, 80%);
        }
        padding: 10px;
      }
      
      .lb-profile-image {
        margin: {
          /*bottom: 10px;*/
          right: 10px;
        }
      }
    }

    .lb-post-timestamp {
        @include inline-block();
        /*display: block;*/
        /*float: left;*/
        color: #999999;
        font-size: 0.7em;
        line-height: 17px;
    }

    .lb-post-tags {
        @include inline-block();
        /*float: left;*/
        list-style: none;
        margin: 0;
        padding: 0;
        font-size: 0.7em;
    }
    .lb-post-tags li {
        float: left;
        list-style: none;
        margin: 0 0 0 1em;

        a {
            display: block;
            @include border-radius(2px);
            background: #AAAAAA;
            color: #fff;
            cursor: pointer;
            padding: 2px 5px;
            text-decoration: none;
            @include transition(all 0.2s);

            &:hover {
                background: #666;
                color: #fff;
                text-decoration: none;
            }
        }
    }

    .lb-post-comments-label {
        display: block;
        float: left;
        clear: both;
        width: 100%;
        vertical-align: middle;
        line-height: 17px;
        font-size: 10px;
        color: #999999;
        text-transform: uppercase;
        letter-spacing: 1px;
        margin: {
            top: 15px;
            bottom: -15px;
        }
        padding: {
            left: 50px;
        }
        border: {
            top: 1px dotted #AAAAAA;
        }
    }

    .lb-toolbar {
        float: left;
        width: 100%;
        background-color: #EEEEEE;
        border-bottom: 1px solid #AAAAAA;
        @include border-radius(4px);

        &.lb-status-paused {
            background-color: lightYellow;
            @include animation(colorPulse 1s infinite alternate);
        }
    }

    .lb-button {
        display: block;
        float: left;
        width: 100px;
        text-align: center;
        border: 1px solid #CCCCCC;
        @include border-radius(3px);
        color: #000000;
        background-color: #DDDDDD;
        text-decoration: none;
        padding: 6px 8px;
        cursor: pointer;
        @include transition(all 0.2s);

        &:hover,
        &.lb-hover {
            color: #000000;
            background-color: #CCCCCC;
            border: 1px solid #AAAAAA;
            text-decoration: none;
        }

        &.lb-pause-button {
            width: 70px;
            margin: 15px;
        }

        &.lb-more-button {
            display: inline-block;
            width: 100%;
            padding: 6px 0px;
        }
    }

    .lb-timeline {
        display: block;
        float: left;
        margin: 15px;
        vertical-align: middle;
    }

    .lb-timeline-slider {
        display: block;
        font-size: 11px;
        height: 10px;
        width: 300px;
    }

    .lb-timeline-label {
        display: block;
        font-size: 0.7em;
        margin: 0 0 5px 0;
    }

    .lb-status {
        display: block;
        float: right;
        vertical-align: middle;
        text-align: center;
        @include border-radius(3px);
        color: #999999;
        background-color: #EEEEEE;
        margin: 20px 15px 0 0;
        padding: 4px;
        border: 1px solid #CCCCCC;
        font-size: 12px;
        text-transform: uppercase;

        &.lb-status-live {
            color: #CC0000;
        }
    }

    /*.lb-unread-count {
        display: block;
        float: right;
        position: relative;
        vertical-align: middle;
        margin: {
            top: 17px;
        }
        padding: 2px 5px;
        @include border-radius(3px);
        font-size: 10px;
        color: #FFFFFF;
        background-color: #CC0000;
    }*/

    .lb-alert {
        background-color: hsl(60, 100%, 80%);
        clear: left;
        font-size: 12px;
        padding: 10px 15px;

        a {
            color: #206994;
            text-decoration: none;
            cursor: pointer;

            &:hover {
                color: #206994;
                text-decoration: underline;
            }
        }

        .lb-unread-count {
            display: inline;
            padding: 2px 6px;
            @include border-radius(3px);
            color: #FFFFFF;
            background-color: #CC0000;
            margin-right: 20px;
            @include transition(all 0.2s);
            border: 1px solid #CC0000;

            &:hover {
                color: #FFFFFF;
                text-decoration: none;
                background-color: lightsalmon;
            }
        }
    }

    .lb-post-container {
        float: left;
        width: 100%;
        overflow-y: auto;
        overflow-x: hidden;
        position: relative;
        margin-top: 20px;
    }

    .lb-top {
        /*background-color: green;*/
    }
    .highlight {
        /*background-color: red;*/
    }
}

.ui-dialog {
    &.lb-image-dialog {
        font-size: 12px;

        .ui-dialog-title {
            font-size: 1.1em;
        }

        .ui-dialog-content {
            text-align: center;
        }
    }
}

/* Styles for IE7 */
*:first-child+html {
    .lb {
        .lb-toolbar {
            padding-bottom: 15px;
        }
        .lb-comment {
            .lb-comment-icon {
                left: 50px;
            }
            .lb-post-text {
                float: none;
            }
        }
        .lb-post-author-tab {
            .lb-blogger-name {
                display: block;
                float: none;
            }
        }
        .lb-featured {
          .lb-profile-image {
            margin: {
              bottom: 0;
            }
          }
        }
        .lb-post-info {
            width: 100%;

            .twitter-share-button {
                right: auto;
                bottom: -1px;
                margin-left: 10px;
            }
        }
        .lb-alert {
            padding-top: 5px;
        }
    }

    /* Use 'close' text instead of image for button */
    .ui-dialog .ui-dialog-titlebar-close {
        width: auto;
        height: auto;
        font-weight: normal;
        text-decoration: none;
        cursor: pointer;

        span {
            background: none;
            text-indent: 0;
            width: auto;
            height: auto;
        }
    }
}

/* Styles for IE 6 and below */
* html {
    .lb {
        .lb-toolbar {
            padding-bottom: 15px;
        }
        .lb-button {
            &.lb-pause-button {
                margin-left: 8px;
            }
        }
        .lb-status {
            margin-right: 8px;
        }
        .lb-comment {
            .lb-comment-icon {
                left: 50px;
            }
            .lb-post-text {
                float: none;
            }
        }
        .lb-post-author-tab {
            .lb-blogger-name {
                display: block;
                float: none;
            }
        }
        .lb-featured {
          .lb-profile-image {
            margin: {
              bottom: 0;
            }
          }
        }
        .lb-post-info {
            width: 100%;

            .twitter-share-button {
                right: auto;
                bottom: -1px;
                margin-left: 10px;
            }
        }
        .lb-post-tags {
            li.lb-first {
                margin-left: 0.5em;
            }
        }
    }

    /* Use 'close' text instead of image for button */
    .ui-dialog .ui-dialog-titlebar-close {
        width: auto;
        height: auto;
        font-weight: normal;
        text-decoration: none;
        cursor: pointer;

        span {
            background: none;
            text-indent: 0;
            width: auto;
            height: auto;
        }
    }
}

